--- a/styles/site-display.css
+++ b/styles/site-display.css
@@ -7,6 +7,11 @@ body {
   /* background-image: url('../images/pattern.png'); */
 }
 
+.map {
+  height: 400px;
+  width: 100%;
+}
+
 .container {
   width:1000px;
   margin-left: auto;
